# harfbuzz

./: harfbuzz.cabal
Bindings/Harfbuzz/: HbBuffer.hsc  HbCommon.hsc
